[lib]
crate-type = ["cdylib"]

[package]
name = "libceleste"
version = "0.1.0"
edition = "2021"

[dependencies]
libm = "0.2"
libc = "0.2"
libc_alloc = "1"

[dev-dependencies]
macroquad = "0.4"

[build-dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"